--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: VictoReiner
+email: reiner13sly@gmail,com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Victor Muñoz, Desarrollador Web, Frontend y Backend. Desarrollador
+  de VideoJuegos Indie en mi tiempo libre y ahora Blogger!.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://vmunozre.github.io" # the base hostname & protocol for your site
+twitter_username: Victor_Reiner
+github_username:  vmunozre
 
 # Build settings
 markdown: kramdown
