--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: VictoReiner
+title: VictorReiner
 email: reiner13sly@gmail,com
 description: > # this means to ignore newlines until "baseurl:"
   Victor Muñoz, Desarrollador Web, Frontend y Backend. Desarrollador
