--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: VictorReiner
-email: reiner13sly@gmail,com
+title: Victor Reiner
+email: reiner13sly@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Victor Muñoz, Desarrollador Web, Frontend y Backend. Desarrollador
   de VideoJuegos Indie en mi tiempo libre y ahora Blogger!.
