--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Blog de Victor Reiner
-email: reiner13sly@gmail.com
+email: vmunozre@victorreiner.es
 description: > # this means to ignore newlines until "baseurl:"
   Victor Muñoz, Desarrollador Web, Frontend y Backend. Desarrollador
   de VideoJuegos Indie en mi tiempo libre y ahora Blogger!.
