--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,10 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://vmunozre.github.io" # the base hostname & protocol for your site
 twitter_username: Victor_Reiner
 github_username:  vmunozre
+author: Victor Muñoz
 
 # Build settings
 markdown: kramdown
+
+gems:
+  - jekyll-sitemap
