--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Victor Muñoz, Desarrollador Web, Frontend y Backend. Desarrollador
   de VideoJuegos Indie en mi tiempo libre y ahora Blogger!.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://vmunozre.github.io" # the base hostname & protocol for your site
+url: "www.victorreiner.es" # the base hostname & protocol for your site
 twitter_username: Victor_Reiner
 github_username:  vmunozre
 author: Victor Muñoz
